2005-03-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/linux/kernel.h (PTR_ERR): Should be an unsigned long,
	not an intager, at least that is what Linux uses.

2005-01-22  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/linux/spinlock.h (DEFINE_SPINLOCK): Added.
	* include/linux/slab.h (vfree): Added vmalloc and vfree which map
	to malloc and free.
	* include/linux/rwsem.h: New file. eCos does not have read/write
	semaphores so these are mapped to normal semaphores.
	
2004-08-12  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/linux/spinlock.h: Add CYG_UNUSED_PARAM() calls to avoid
	compiler warnings.

2004-08-04  Gary Thomas <gary@mlbassoc.com>

	* include/linux/list.h (list_for_each_entry): New macro needed for
	latest jffs2 code.

2003-11-12  Thomas Koeller <thomas.koeller@baslerweb.com>

        * cdl/linux.cdl:
        * include/asm/page.h:
        Make page size configurable via cdl.

2003-10-18  Gary Thomas  <gary@mlbassoc.com>

        * src/rbtree.c (rb_erase): Fix bug in red-black tree which caused
        node corruption - merge from external sources, found by Scott 
	Wilkerson.

2003-10-18  Savin Zlobec <savin@elatec.si>

        * include/linux/rbtree.h: 
        Fixed 'pointer of type `void *' used in subtraction' compiler warrning.

2003-07-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/linux/init.h: 
	* include/linux/vmalloc.h: New dummy files so that jffs2 will
	compile.

2003-07-27  Michael Checky  <Michael_Checky@ThermoKing.com>
            Andrew Lunn <andrew.lunn@ascom.ch>
	
 	* include/linux/kernel.h: Changed the #define IS_ERR to work correctly
 	negative error values returned by the jffs2 code.

2003-06-10  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/linux/stat.h: Removed #defines which has been added to 
	the main eCos sys/stat.h. 

2003-01-21  David Woodhouse  <dwmw2@infradead.org>

	* New package.

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####